--- a/main.css
+++ b/main.css
@@ -1,1 +1,79 @@
-
+h2 {
+    color:black;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 30px;
+}
+  
+h1 {
+    color: black;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 0px;
+  
+}
+  
+body {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    background-color: rgb(210, 209, 214);
+}
+  
+#listContainer {
+    height: auto;
+    width: auto;
+    padding: 10px;
+    text-align: left;
+    margin-left: 0;
+    position: absolute; 
+    top: 95px;
+    background-color: beige;
+    border-radius: 15px; 
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5); 
+}
+#moviesContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: left;
+    padding: 20px;
+} 
+  
+img {
+    display: block;
+    margin: auto;
+    max-width: 100%;
+    max-height: 300px;
+}
+  
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+  
+li {
+    margin-bottom: 10px;
+ }
+  
+#main {
+    margin-top: 0px;
+    position: absolute;
+    right:400px; 
+}
+  
+#new {
+    position: absolute;
+    left: 0px;
+    margin-left: 40px;
+}
+  
+#centered-section {
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+}
